# LK-ArkUiX

./: build-profile.json5  oh-package-lock.json5  oh-package.json5
.arkui-x/android/: gradlew.bat  local.properties  settings.gradle
.arkui-x/android/app/: build.gradle  proguard-rules.pro
.arkui-x/android/app/src/main/: AndroidManifest.xml
.arkui-x/android/app/src/main/cpp/: CMakeLists.txt
.arkui-x/android/gradle/wrapper/: gradle-wrapper.properties
.arkui-x/ios/app/: AppDelegate.m
.arkui-x/ios/app.xcodeproj/: project.pbxproj
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  article_parser.cpp  t2s_engine.cpp
entry/src/main/ets/api/: ApiClient.ets
entry/src/main/ets/common/: Constants.ets
entry/src/main/ets/componets/: NovelCard.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: DataModels.ets
entry/src/main/ets/pages/: AboutView.ets  ArticleDetail.ets  AuthView.ets  CategoryView.ets  CollectionDetailView.ets  CollectionView.ets  DynamicView.ets  HistoryView.ets  HomeView.ets  Index.ets  MessageCenterView.ets  ProfileView.ets  SearchView.ets  Settings.ets  UserProfileView.ets
entry/src/main/ets/repository/: NovelRepository.ets
entry/src/main/ets/utils/: ArticleParser.ets  BrowserHelper.ets  CacheManager.ets  ContentDataSource.ets  FileLog.ets  FontManager.ets  (+9 more)
entry/src/test/: LocalUnit.test.ets
hvigor/: hvigor-config.json5
(+30 files in other folders)
